add more features for admin dashboard